----------
v3.2.0-git
----------



-----------
v3.2.0beta1
-----------

[jan] Pass current vacation addresses to hook
      (skhorde@smail.inf.fh-bonn-rhein-sieg.de, Request #13185).


------------
v3.2.0alpha1
------------

[mms] Use standardized 'enotify' sieve extension (RFC 5435) by default instead
      of deprecated 'notify' extension (Request #8784).
[mms] Use standardized 'imap4flags' sieve extension (RFC 5232) by default
      instead of deprecated 'imapflags' extension (Request #8784).
[mms] Add ability to filter rules by mailbox.
[mms] Add 'max_forward' permission (Request #10332).
[mms] Permissions can now be applied per backend, rather than globally.
[mms] Replace max blacklist/whitelist configuration parameters with equivalent
      permissions options.
[mms] Sorting of rules now done via drag/drop javascript (Request #1993).
[jan] Make shares table compatible with Oracle.
[mms] Validate e-mail addresses on the forward and vacation pages (Request
      #7249).
[mms] Add 'newEmailFilter' API link.


------
v3.1.5
------

[mms] Fix blacklist/whitelist matching with IMAP backend (Bug #13031).
[mms] Fix procmail reject recipe (Bug #13060; admin@dei.unipd.it).


------
v3.1.4
------

[jan] Update Danish translation (Erling Preben Hansen <erling@eph.dk>).
[jan] Make spam level a required form field (Bug #12964).
[jan] Fix behavior of 'utf' parameter (Bug #12937).
[mms] Fix sieve driver correctly identifying mailing lists when determining
      whether to send vacation messages
      (skhorde@smail.inf.fg-bonn-rhein-sieg.de, Bug #12938).


------
v3.1.3
------

[mms] SECURITY: Protect against CSRF attacks by using tokens on destructive
      actions (Bug #12796; CVE-2013-6275; found by Marcela Benetrix
      <m.benetrix@e-secure.com.au>).


------
v3.1.2
------

[mms] Disable links if the underlying preferences are locked.
[jan] Fix setting excluded addresses and mailing list flag in Sieve vacation
      rule.


------
v3.1.1
------
